# Nexus

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: main.py
app/application/: auth_service.py  document_service.py
app/application/services/: agent_orchestrator.py
app/bizlogic/: entities.py  exceptions.py  ports.py
app/config/: config.py
app/dependencies/: auth.py  database.py  document.py
app/domain/: entities.py  exceptions.py  ports.py
app/infrastructure/: postgres.py  repositories.py  repositries.py
app/infrastructure/llm/: openrouter_provider.py
app/infrastructure/storage/: s3.py  s3_storage.py
app/postgres/: init.sql
app/tests/unit/: test_agent_orchestrator.py  test_auth_service.py  test_document_service.py  test_hash.py  test_pg_document_repo.py  test_s3_storage.py
app/workers/: processor.py
migrations/versions/: 46df4a11cbb0_agent_tables.py  669f64c13398_create_user_table.py  803d22ba4727_create_documents_table.py  c0b8d4cd8545_jobs_table.py
static/: app.js  index.html  style.css
